deom-app/chuck/templates/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "chuck-ui"
  namespace: chuck
spec:
  selector:
    app: "chuck-ui"
  ports:
  - name: http
    port: 80
    targetPort: 3000
